--- a/index.html
+++ b/index.html
@@ -7,190 +7,7 @@
   <title>人物生平轨迹示例</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="anonymous">
-  <style>
-    html,
-    body,
-    #app {
-      height: 100%;
-      margin: 0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Arial;
-    }
-
-    #app {
-      display: flex;
-    }
-
-    .sidebar {
-      width: 360px;
-      min-width: 260px;
-      max-width: 420px;
-      background: #fff;
-      border-right: 1px solid #eee;
-      padding: 16px;
-      box-sizing: border-box;
-      overflow: auto;
-    }
-
-    .map-wrap {
-      flex: 1;
-      position: relative;
-    }
-
-    #map {
-      position: absolute;
-      inset: 0;
-    }
-
-    .person-title {
-      font-size: 20px;
-      font-weight: 600;
-      margin-bottom: 8px;
-    }
-
-    .small {
-      font-size: 13px;
-      color: #666;
-    }
-
-    .controls {
-      display: flex;
-      gap: 8px;
-      align-items: center;
-      margin: 12px 0;
-    }
-
-    /* 搜索下拉样式 */
-    .search-wrap {
-      position: relative;
-      min-width: 180px;
-      flex: 0 0 220px;
-    }
-    .search-input {
-      width: 100%;
-      padding: 6px 8px;
-      border-radius: 6px;
-      border: 1px solid #ddd;
-      box-sizing: border-box;
-    }
-    .suggest-list {
-      position: absolute;
-      left: 0; right: 0;
-      top: calc(100% + 4px);
-      background: #fff;
-      border: 1px solid #eee;
-      border-radius: 6px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-      max-height: 240px;
-      overflow: auto;
-      display: none;
-      z-index: 1000;
-    }
-    .suggest-item {
-      padding: 8px 10px;
-      cursor: pointer;
-    }
-    .suggest-item:hover, .suggest-item.active {
-      background: #f5f8ff;
-    }
-
-    .timeline {
-      width: 100%;
-    }
-
-    .event-card {
-      padding: 10px;
-      border-radius: 8px;
-      border: 1px solid #f0f0f0;
-      margin-bottom: 8px;
-      cursor: pointer;
-    }
-
-    .event-card.active {
-      background: #f5f8ff;
-      border-color: #cfe0ff;
-    }
-
-    .event-meta {
-      color: #666;
-      font-size: 13px;
-      margin-bottom: 6px;
-    }
-
-    .play-btn {
-      padding: 8px 12px;
-      border-radius: 6px;
-      border: none;
-      background: #1976d2;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    .play-btn.pause {
-      background: #555;
-    }
-
-    .attribution {
-      position: absolute;
-      right: 12px;
-      bottom: 8px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 6px 8px;
-      border-radius: 6px;
-      font-size: 12px;
-    }
-
-    .overlay {
-      position: absolute;
-      left: 16px;
-      top: 16px;
-      background: rgba(255, 255, 255, 0.95);
-      padding: 8px 10px;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
-      z-index: 1000;
-    }
-
-    .info-overlay {
-      top: 70px;
-      max-width: 360px;
-    }
-
-    .leaflet-popup {
-      display: none !important;
-    }
-
-    /* 自定义圆点标记样式（带白色环） */
-    .leaflet-div-icon {
-      background: transparent;
-      border: none;
-    }
-
-    .marker-dot {
-      display: inline-block;
-      width: 16px;
-      height: 16px;
-      border-radius: 50%;
-      background: #fff;
-      border: 3px solid var(--mc, #8B5CF6);
-      /* box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.98), 0 2px 8px rgba(0, 0, 0, 0.28); */
-    }
-
-    .marker-blue {
-      background: #3B82F6;
-    }
-
-    .marker-purple {
-      background: #8B5CF6;
-    }
-
-    .marker-orange {
-      background: #F59E0B;
-    }
-
-    .marker-dot.selected {
-      box-shadow: 0 0 0 8px rgba(255, 255, 255, 0.98), 0 0 0 14px rgba(255, 255, 255, 0.55), 0 0 14px var(--mc), 0 6px 18px rgba(0, 0, 0, 0.28);
-    }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -226,306 +43,9 @@
   </div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <script>
-    // 多人物事件数据（示例）
-    let people = {};
-    let currentPerson = '毛泽东';
-    let events = [];
-
-    const eventsList = document.getElementById('eventsList');
-    const slider = document.getElementById('slider');
-    const playBtn = document.getElementById('play');
-    const yearLabel = document.getElementById('yearLabel');
-    const status = document.getElementById('mapStatus');
-    let playTimer = null;
-    let currentIndex = 0;
-    slider.max = 0;
-
-    // 初始化地图（Leaflet）
-    status.textContent = '初始化地图...';
-    const map = L.map('map', { zoomControl: false });
-    map.setView([34, 110], 4);
-    const tiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-      attribution: '&copy; OpenStreetMap contributors'
-    });
-    tiles.addTo(map);
-    status.textContent = '地图加载成功';
-
-    // 标记点与轨迹线
-    let markers = [];
-    let polyline = null;
-
-    // 不同人物的样式定义（标记颜色与轨迹颜色）
-    let personStyles = {};
-    let allNames = [];
-    let filteredNames = [];
-    let activeSuggestIndex = -1;
-
-    function getMarkerIcon(selected = false) {
-      const color = (personStyles[currentPerson]?.markerColor) || '#8B5CF6';
-      const selectedClass = selected ? ' selected' : '';
-      return L.divIcon({ className: 'marker-icon', html: `<span class="marker-dot${selectedClass}" style="--mc:${color}"></span>`, iconSize: [16, 16], iconAnchor: [8, 8] });
-    }
-
-    function drawMarkersAndLine() {
-      // 清理旧图层
-      markers.forEach(m => { try { map.removeLayer(m); } catch (_) { } });
-      markers = [];
-      if (polyline) { try { map.removeLayer(polyline); } catch (_) { } polyline = null; }
-
-      if (!events.length) { return; }
-      const path = events.map(e => [e.lat, e.lon]);
-      const color = (personStyles[currentPerson]?.lineColor) || '#A78BFA';
-      polyline = L.polyline(path, { color, weight: 4, opacity: 0.85, dashArray: '6 6' }).addTo(map);
-
-      events.forEach((e, idx) => {
-        const m = L.marker([e.lat, e.lon], { icon: getMarkerIcon(false) }).addTo(map);
-        m.on('click', () => selectIndex(idx));
-        markers.push(m);
-      });
-      refreshSelectedMarker();
-      fitToEvents();
-    }
-
-    // 初始不绘制，等待数据加载
-
-    // 旧的重复标记创建与弹窗绑定已移除，统一由 drawMarkersAndLine 管理
-
-    function renderList() {
-      eventsList.innerHTML = '';
-      if (!events.length) {
-        const div = document.createElement('div');
-        div.className = 'event-card';
-        div.innerHTML = `<div style="font-weight:600">暂无事件数据</div>
-                         <div class="event-meta">请从搜索框选择人物或补充数据</div>`;
-        eventsList.appendChild(div);
-        yearLabel.textContent = '—';
-        const infoEl = document.getElementById('infoOverlay');
-        infoEl.textContent = '暂无事件数据';
-        return;
-      }
-      events.forEach((e, idx) => {
-        const div = document.createElement('div');
-        div.className = 'event-card';
-        div.dataset.idx = idx;
-        div.innerHTML = `<div style="font-weight:600">${e.year} · ${e.title}</div>
-                         <div class="event-meta">${e.place} · 年龄：${e.age}</div>
-                         <div style="color:#333">${e.detail}</div>`;
-        div.onclick = () => selectIndex(idx);
-        eventsList.appendChild(div);
-      });
-    }
-    // 初始不渲染列表，等待数据加载
-
-    function updateInfoOverlay(e) {
-      const infoEl = document.getElementById('infoOverlay');
-      infoEl.innerHTML = `<div style="min-width:220px">
-        <strong>${e.year} · ${e.title}</strong>
-        <div class="small" style="margin-top:6px">${e.place} · 年龄：${e.age}</div>
-        <div style="margin-top:8px">${e.detail}</div>
-      </div>`;
-    }
-
-    function updateUI(index) {
-      if (index < 0 || index >= events.length) return;
-      const e = events[index];
-      yearLabel.textContent = e.year;
-      document.querySelectorAll('.event-card').forEach(el => el.classList.remove('active'));
-      const active = document.querySelector(`.event-card[data-idx='${index}']`);
-      if (active) active.classList.add('active');
-
-      // 不改变缩放或移动视图，仅高亮所选标记
-      refreshSelectedMarker(index);
-      updateInfoOverlay(e);
-
-      slider.value = index;
-      currentIndex = index;
-    }
-
-    function refreshSelectedMarker(index = currentIndex) {
-      markers.forEach((m, i) => {
-        m.setIcon(getMarkerIcon(i === index));
-      });
-    }
-
-    function fitToEvents() {
-      const coords = events.map(e => [e.lat, e.lon]);
-      if (!coords.length) return;
-      if (coords.length === 1) { map.setView(coords[0], 10); return; }
-      const bounds = L.latLngBounds(coords);
-      try { map.fitBounds(bounds, { padding: [60, 60], maxZoom: 8 }); } catch (_) { }
-    }
-
-    function selectIndex(idx) {
-      updateUI(idx);
-      stopPlay();
-    }
-
-    slider.addEventListener('input', (ev) => {
-      const idx = Number(ev.target.value);
-      updateUI(idx);
-      stopPlay();
-    });
-
-    function setPerson(name) {
-      currentPerson = name;
-      events = people[name] || [];
-      slider.max = Math.max(0, events.length - 1);
-      document.getElementById('personTitle').textContent = `${name}的一生轨迹示例`;
-      renderList();
-      drawMarkersAndLine();
-      if (events.length) updateUI(0);
-    }
-
-    // 搜索建议逻辑
-    const searchInput = document.getElementById('personSearch');
-    const suggestEl = document.getElementById('searchList');
-    function renderSuggestions(list) {
-      if (!list.length) { suggestEl.style.display = 'none'; suggestEl.innerHTML = ''; return; }
-      suggestEl.style.display = 'block';
-      suggestEl.innerHTML = list.map((n, i) => `<div class="suggest-item${i===activeSuggestIndex?' active':''}" data-name="${n}">${n}</div>`).join('');
-      suggestEl.querySelectorAll('.suggest-item').forEach(item => {
-        item.addEventListener('click', () => selectPerson(item.dataset.name));
-      });
-    }
-    function filterAndShow(q) {
-      const term = (q || '').trim().toLowerCase();
-      filteredNames = allNames.filter(n => n.toLowerCase().includes(term)).slice(0, 60);
-      activeSuggestIndex = -1;
-      renderSuggestions(filteredNames);
-    }
-    function selectPerson(name) {
-      searchInput.value = name;
-      suggestEl.style.display = 'none';
-      setPerson(name);
-    }
-    searchInput.addEventListener('input', (ev) => filterAndShow(ev.target.value));
-    searchInput.addEventListener('focus', (ev) => filterAndShow(ev.target.value));
-    searchInput.addEventListener('keydown', (ev) => {
-      if (ev.key === 'ArrowDown') {
-        activeSuggestIndex = Math.min(filteredNames.length - 1, activeSuggestIndex + 1);
-        renderSuggestions(filteredNames);
-        ev.preventDefault();
-      } else if (ev.key === 'ArrowUp') {
-        activeSuggestIndex = Math.max(0, activeSuggestIndex - 1);
-        renderSuggestions(filteredNames);
-        ev.preventDefault();
-      } else if (ev.key === 'Enter') {
-        ev.preventDefault();
-        let name = '';
-        if (activeSuggestIndex >= 0) {
-          name = filteredNames[activeSuggestIndex] || '';
-        } else {
-          const typed = (searchInput.value || '').trim();
-          if (typed) name = typed; else if (filteredNames.length > 0) name = filteredNames[0];
-        }
-        if (name) {
-          selectPerson(name);
-          suggestEl.style.display = 'none';
-        }
-      } else if (ev.key === 'Escape') {
-        suggestEl.style.display = 'none';
-      }
-    });
-    document.addEventListener('click', (ev) => {
-      if (!suggestEl.contains(ev.target) && ev.target !== searchInput) suggestEl.style.display = 'none';
-    });
-
-    async function loadExcelNames() {
-      try {
-        const resp = await fetch('http://localhost:8001/api/names');
-        const list = await resp.json();
-        if (Array.isArray(list)) return list;
-        return [];
-      } catch (e) {
-        console.error('加载姓名列表失败：', e);
-        return [];
-      }
-    }
-
-    function startPlay() {
-      if (playTimer) return;
-      playBtn.textContent = '暂停';
-      playBtn.classList.add('pause');
-      playTimer = setInterval(() => {
-        let next = currentIndex + 1;
-        if (next >= events.length) next = 0;
-        updateUI(next);
-      }, 1800);
-    }
-
-    function stopPlay() {
-      if (playTimer) {
-        clearInterval(playTimer);
-        playTimer = null;
-        playBtn.textContent = '播放';
-        playBtn.classList.remove('pause');
-      }
-    }
-
-    playBtn.addEventListener('click', () => {
-      if (playTimer) stopPlay(); else startPlay();
-    });
-
-    async function initData() {
-      try {
-        // 只加载搜索建议（Excel），不请求全量人物数据
-        const excelNames = await loadExcelNames();
-        allNames = Array.from(new Set(excelNames));
-
-        // 选择默认人物并按需请求其数据
-        const defaultName = allNames.includes(currentPerson) ? currentPerson : (allNames[0] || '');
-        if (defaultName) {
-          await setPerson(defaultName);
-        } else {
-          // 无建议名单时，尝试按需请求一个常用示例名称
-          await setPerson('毛泽东');
-        }
-        // 初始化建议列表（显示全部或空查询）
-        filterAndShow('');
-      } catch (e) {
-        console.error('初始化失败：', e);
-        const statusEl = document.getElementById('mapStatus');
-        if (statusEl) statusEl.textContent = '初始化失败';
-      }
-    }
-
-    async function fetchPerson(name) {
-      const url = `http://localhost:8001/api/person?name=${encodeURIComponent(name)}`;
-      const resp = await fetch(url);
-      if (!resp.ok) throw new Error(`接口返回错误：${resp.status}`);
-      return await resp.json();
-    }
-
-    async function setPerson(name) {
-      try {
-        currentPerson = name;
-        document.getElementById('personTitle').textContent = `${name}的一生轨迹示例`;
-        // 缓存命中直接使用，否则按需请求
-        if (!people[name]) {
-          const p = await fetchPerson(name);
-          people[name] = p.events || [];
-          if (p.style) personStyles[name] = p.style;
-        }
-        events = people[name] || [];
-        slider.max = Math.max(0, events.length - 1);
-        renderList();
-        drawMarkersAndLine();
-        if (events.length) updateUI(0); else {
-          const infoEl = document.getElementById('infoOverlay');
-          infoEl.textContent = '暂无事件数据';
-        }
-      } catch (e) {
-        console.error('加载人物失败：', e);
-        const statusEl = document.getElementById('mapStatus');
-        if (statusEl) statusEl.textContent = `加载 ${name} 失败`;
-      }
-    }
-
-    initData();
-  </script>
+  <script type="module" src="./src/app.js"></script>
+  <!-- 原内联脚本已迁移到模块 ./src/app.js，提高可维护性 -->
+  
 </body>
 
 </html>
