--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="app">
     <div class="sidebar">
-      <div id="personTitle" class="person-title">人物轨迹示例</div>
+      <div id="personTitle" class="person-title">人物轨迹</div>
       <div class="controls">
         <div class="search-wrap">
           <input id="personSearch" class="search-input" placeholder="搜索人物…" autocomplete="off" />
